projects: improves build system
Adds echo statements to show what file is currently being processes, and
removes parallelization as it makes understanding the output very confusing
since the builds are interleaved. Also clobbers projects (cleans) before
building *all* targets. Builds all targets in case one target has more GCC
warnings enabled or something...just playing it safe :)

--- a/projects/Makefile
+++ b/projects/Makefile
@@ -8,7 +8,23 @@ subdirs: ${SUBDIRS}
 ifneq (${make_lock}, 1)
 
 ${SUBDIRS}:
-	-${MAKE} -j -C $@ make_lock=1
+	@echo -e "\n"
+	@echo -e "========================================================"
+	@echo -e "|\tEntering $@"
+	@echo -e "========================================================"
+	@echo -e "\n"
+	@echo -e "\t~~~~ CLOBBERING... ~~~~"
+	@echo -e "\n"
+	-${MAKE} -C $@ make_lock=1 clobber
+	@echo -e "\n"
+	@echo -e "\t~~~~ BUILDING... ~~~~"
+	@echo -e "\n"
+	-${MAKE} -C $@ make_lock=1 all
+	@echo -e "\n"
+	@echo -e "========================================================"
+	@echo -e "|\tExiting $@"
+	@echo -e "========================================================"
+	@echo -e "\n"
 
 # override rule for the directory we were called from
 # so we don't build that directory twice
