--- a/projects/.gitignore
+++ b/projects/.gitignore
@@ -1,5 +1,27 @@
-*/nbproject/private/
-*/nbproject/private/*
+#
+## NETBEANS ##
+
+build/
+dist/
+nb-configuration.xml
+nbactions.xml
+nbbuild/
+nbdist/
+Makefile-*
+Package-*
+private/
+
+Makefile-default.mk
+Makefile-genesis.properties
+Makefile-impl.mk
+Makefile-local-default.mk
+Makefile-variables.mk
+Package-default.bash
+
 !configurations.xml
 !Makefile
 !project.xml
+
+
+*/nbproject/private/
+*/nbproject/private/*
