--- a/.gitignore
+++ b/.gitignore
@@ -58,6 +58,11 @@ nbdist/
 nbproject/private/
 projects/*/nbproject/private/
 projects/*/nbproject/private/*
+*.mk
+*.properties
+Makefile-default.mk
+Makefile-genesis.properties
+Makefile-impl.mk
 !configurations.xml
 !Makefile
 !project.xml
