--- a/projects/car_driver_controls.X/nbproject/Makefile-genesis.properties
+++ b/projects/car_driver_controls.X/nbproject/Makefile-genesis.properties
@@ -1,8 +1,8 @@
 #
-#Wed Jun 20 20:17:23 CDT 2012
-default.languagetoolchain.dir=C\:\\Program Files (x86)\\Microchip\\mplabc32\\v2.01\\bin
-default.com-microchip-mplab-nbide-toolchainC32-C32LanguageToolchain.md5=c02b2f713e62e0f9793140c61dbdfdf3
-com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=39edbdd4b2849b7912992109f4b86781
-default.languagetoolchain.version=2.01
+#Wed Jan 23 04:03:28 CST 2013
+default.com-microchip-mplab-nbide-toolchainXC32-XC32LanguageToolchain.md5=7144f3efb723ea297d0b9c49202c96fa
+default.languagetoolchain.dir=C\:\\Program Files (x86)\\Microchip\\xc32\\v1.20\\bin
+com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=d812b2c39265b72417b5515e5943bf80
+default.languagetoolchain.version=1.20
 host.platform=windows
 conf.ids=default
