delete and ignore unnecessary files
Makefile-default.mk and Makefile-genesis.properties specifically.

--- a/.gitignore
+++ b/.gitignore
@@ -61,6 +61,7 @@ projects/*/nbproject/private/*
 *.mk
 *.properties
 Makefile-default.mk
+Makefile-local-default.mk
 Makefile-genesis.properties
 Makefile-impl.mk
 !configurations.xml
