ignore libs/nusolar_lib.X/nbproject/private/
"nbproject/private/" doesn't catch this

--- a/.gitignore
+++ b/.gitignore
@@ -56,6 +56,7 @@ nbactions.xml
 nbbuild/
 nbdist/
 nbproject/private/
+libs/*/nbproject/
 projects/*/nbproject/private/
 projects/*/nbproject/private/*
 *.mk
