c++ skeleton for Steering Wheel
Almost complete except CAN (get on that) and the Nokia screen.

using features like c++-style for_each loops, inheritance, namespaces,
and x macros to pack variables into arrays.

--- a/.gitignore
+++ b/.gitignore
@@ -48,6 +48,25 @@ auto-save-list
 tramp
 .\#*
 
+# Xcode
+build/*
+*.pbxuser
+!default.pbxuser
+*.mode1v3
+!default.mode1v3
+*.mode2v3
+!default.mode2v3
+*.perspectivev3
+!default.perspectivev3
+*.xcworkspace
+!default.xcworkspace
+*.xcuserstate
+project.xcworkspace/
+xcuserdata/
+profile
+*.moved-aside
+*~.nib
+
 # netbeans files/folders
 build/
 dist/
